# Module_Web_14_MHW

./: .env.example  .gitignore  Readme.md  docker-compose.yml  main.py  middlewares.py  pyproject.toml  test.db
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/versions/: 002e62397d91_init.py  0b126d00c504_init.py  3a402c87496b_init.py  6636d3fb787e_init.py  fc115c82be26_init.py
postgres-data/base/16469/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13396  13396_fsm  13396_vm  13400  13401  13401_fsm  13401_vm  13405  13406  13406_fsm  13406_vm  13410  13411  13411_fsm  13411_vm  13415  16470  16473  16475  16476  16481  16482  16484  16486  16492  16493  (+221 more)
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
postgres-data/pg_xact/: 0000
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: schemas.py  users.py
src/services/: auth.py  email.py
tests/: test_unit_repository_contacts.py  test_unit_repository_users.py  test_unit_routes_auth.py
