[tool.poetry]
name = "module-web-14-mhw"
version = "0.1.0"
description = ""
authors = ["Олександр <alexander.zhukov.2012@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pydantic = "^2.7.0"
email-validator = "^2.1.1"
fastapi-limiter = "^0.1.6"
libgravatar = "^1.0.4"
python-jose = "^3.3.0"
passlib = "^1.7.4"
gravatar = "^0.1"
python-dotenv = "^1.0.1"
redis = "^5.0.3"
bcrypt = "^4.1.2"
asyncpg = "^0.29.0"
jinja2 = "^3.1.3"
cloudinary = "^1.39.1"
pydantic-settings = "^2.2.1"
fastapi-mail = "^1.4.1"
psycopg2 = "^2.9.9"
pytest = "^8.1.1"
coverage = "^7.4.4"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["tests",]
pythonpath = "."
filterwarnings = "ignore::DeprecationWarning"
